# k_means

./: README.md  kmeans.py  main.py  pyproject.toml  utils.py
kmeans/: kmeans.py  main.py
