[project]
name = "k-means"
version = "0.1.0"
description = "Custom K-Means algorithm to form clusters, and visualizes the results with Matplotlib."
authors = [
    {name = "Mert-55",email = "mert.cagiran@iu-study.org"}
]
license = {text = "MIT-Licence"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]
packages = [{ include = "kmeans" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.2"

[tool.poe.tasks]
start = "poetry run python -m kmeans.main"

[tool.poe.tasks.setup]
shell = """
set -ex
poetry install --sync
"""
interpreter = "bash"
